[gd_scene load_steps=7 format=3 uid="uid://jegqc35wf1ts"]

[ext_resource type="Theme" uid="uid://bunsa4hauwco7" path="res://Themes/Theme.tres" id="1_4mtw6"]
[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_olyvw"]
[ext_resource type="Texture2D" uid="uid://bv51au8rsc64y" path="res://Images/Parchament.png" id="2_ri2kw"]
[ext_resource type="PackedScene" uid="uid://6btcj7krioeu" path="res://Scenes/BackgroundManager.tscn" id="2_y4kab"]
[ext_resource type="PackedScene" uid="uid://c6odvlamvd46f" path="res://Scenes/CharacterHPMP.tscn" id="4_q2jlj"]
[ext_resource type="PackedScene" uid="uid://7a34mwhsph6g" path="res://Scenes/CharacterSheet.tscn" id="6_lsjfb"]

[node name="Chat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_olyvw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="BackgroundManager" parent="." instance=ExtResource("2_y4kab")]
layout_mode = 1

[node name="TextureRect" type="NinePatchRect" parent="."]
visible = false
texture_filter = 1
use_parent_material = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.451
anchor_top = 0.025
anchor_right = 0.722
anchor_bottom = 0.198
offset_left = 0.447937
offset_top = -0.200001
offset_right = 0.25592
offset_bottom = -0.304016
texture = ExtResource("2_ri2kw")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="CombatPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 320.0
offset_right = -320.0
offset_bottom = 120.0
grow_horizontal = 2

[node name="Combat" type="HBoxContainer" parent="CombatPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.625
offset_left = 8.0
offset_top = 7.0
offset_right = -8.00006
offset_bottom = 103.0
metadata/_edit_group_ = true

[node name="Self" parent="CombatPanel/Combat" instance=ExtResource("4_q2jlj")]
layout_mode = 2

[node name="Target" parent="CombatPanel/Combat" instance=ExtResource("4_q2jlj")]
layout_mode = 2

[node name="Chatbox" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.173
anchor_right = 1.0
anchor_bottom = 0.988
offset_left = 328.0
offset_top = -0.103996
offset_right = -8.0
offset_bottom = -0.223999
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_4mtw6")
theme_override_constants/separation = 0

[node name="RoomDescriptions" type="CheckBox" parent="Chatbox"]
self_modulate = Color(1, 1, 0, 1)
layout_mode = 2
focus_mode = 0
button_pressed = true
text = "Room Descriptions"
flat = true

[node name="RoomDescription" type="RichTextLabel" parent="Chatbox"]
layout_mode = 2
bbcode_enabled = true
text = "[bgcolor=red]test
test"
fit_content = true
meta_underlined = false

[node name="Chatbox" type="RichTextLabel" parent="Chatbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[bgcolor=blue]test"
scroll_following = true
meta_underlined = false

[node name="Commands" type="RichTextLabel" parent="Chatbox"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
fit_content = true
scroll_following = true
meta_underlined = false
hint_underlined = false

[node name="LineEdit" type="LineEdit" parent="Chatbox"]
texture_filter = 1
layout_mode = 2
placeholder_text = "Say Something"

[node name="CharacterSheet" parent="." instance=ExtResource("6_lsjfb")]
layout_mode = 1

[node name="Settings" type="VBoxContainer" parent="."]
visible = false
use_parent_material = true
clip_contents = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -312.0
offset_top = -176.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
metadata/_edit_group_ = true

[node name="Logout" type="Button" parent="Settings"]
layout_mode = 2
text = "Logout"

[node name="Label" type="Label" parent="Settings"]
layout_mode = 2
text = "Font Size"

[node name="Font Size" type="HSlider" parent="Settings"]
layout_mode = 2
min_value = 12.0
max_value = 32.0
value = 16.0

[node name="Label2" type="Label" parent="Settings"]
layout_mode = 2
text = "Volume"

[node name="Audio Volume" type="HSlider" parent="Settings"]
layout_mode = 2
min_value = -80.0
max_value = 0.0
step = 0.2

[node name="Delay" type="Label" parent="Settings"]
layout_mode = 2

[connection signal="meta_clicked" from="Chatbox/RoomDescription" to="." method="_on_room_meta_clicked"]
[connection signal="meta_clicked" from="Chatbox/Chatbox" to="." method="_on_chatbox_meta_clicked"]
[connection signal="meta_clicked" from="Chatbox/Commands" to="." method="_on_chatbox_meta_clicked"]
[connection signal="pressed" from="Settings/Logout" to="." method="_on_logout_pressed"]
[connection signal="value_changed" from="Settings/Font Size" to="." method="_on_font_size_value_changed"]
[connection signal="value_changed" from="Settings/Audio Volume" to="." method="_on_audio_volume_value_changed"]
